--- a/wdd130/wwr/styles/site-planning-rafting.css
+++ b/wdd130/wwr/styles/site-planning-rafting.css
@@ -6,25 +6,25 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #2F1000   ;
-  --secondary-color: #C68549 ;
-  --accent1-color: #63A375;
-  --accent2-color: #122b1a;
+  --primary-color: #F7EADE;
+  --secondary-color: #42271C;
+  --accent1-color: #0B3D22;
+  --accent2-color: #000000;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Rye";
   --paragraph-font: Roboto, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #2F1000;  /* headlines on a white background */ 
-  --headline-color-on-color: #122b1a; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #2F1000; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #122b1a; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #C68549;
-  --nav-link-color: #C68549;
-  --nav-background-color: #2F1000;
-  --nav-hover-link-color: #122b1a;
-  --nav-hover-background-color: #C68549;
+  --headline-color-on-white: #42271C;  /* headlines on a white background */ 
+  --headline-color-on-color: #0B3D22; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #42271C; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #0B3D22; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #F7EADE;
+  --nav-link-color: #F7EADE;
+  --nav-background-color: #42271C;
+  --nav-hover-link-color: #000000;
+  --nav-hover-background-color: #F7EADE;
 }
 
 
