--- a/wdd130/wwr/styles/site-planning-rafting.css
+++ b/wdd130/wwr/styles/site-planning-rafting.css
@@ -12,8 +12,8 @@ Fonts are separated by a & */
   --accent2-color: #000000;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Rye";
-  --paragraph-font: Roboto, Helvetica, sans-serif;
+  --heading-font: "Rye, "Georgia, serif;
+  --paragraph-font: "Roboto", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #42271C;  /* headlines on a white background */ 
