--- a/wdd130/wwr/styles/styles.css
+++ b/wdd130/wwr/styles/styles.css
@@ -2,6 +2,7 @@
 
 body{
  background-color: #f7eade;
+ font-size: 22px;
 }
 
 header{
@@ -19,6 +20,7 @@ header{
 
 nav{
     text-align: center;
+    font-family: "Roboto", Helvetica, sans-serif;
 }
 
 nav a:hover{
@@ -46,12 +48,22 @@ nav a{
 
 .home{
     color: #42271c;
-    font-family: "rye";
+    font-family: "rye", Georgia, serif;
+    font-size: 2em;
+}
+
+.below_home{
+    color: #42271c;
+    font-family: "Roboto", Helvetica, sans-serif;
+
 }
 
 .shop{
     text-decoration: none;
     color: #0b3d22;
+    font-family: "Roboto", Helvetica, sans-serif;
+    font-size: 18px;
+
 }
 
 .shop:hover{
@@ -65,7 +77,8 @@ nav a{
 
 main section{
     text-align: center;
-    color: #42271c
+    color: #42271c;
+    font-family: "Roboto", Helvetica, sans-serif;
 }
 
 #background {
@@ -77,8 +90,18 @@ main section{
     color: #42271c;
 }
 
+.msg h2{
+    font-family: "rye", Georgia, serif;
+}
+
+.msg p{
+    font-family: "Roboto", Helvetica, sans-serif;
+    font-size: 1.5em;
+}
+
 footer{
     background-color: #42271c;
+    font-family: "Roboto", Helvetica, sans-serif;
 }
 
 footer p {
