--- a/wdd130/wwr/styles/styles.css
+++ b/wdd130/wwr/styles/styles.css
@@ -8,7 +8,9 @@ body{
 }
 
 header{
-    background-color: #0b3d22;
+    background-color: rgba(11, 61, 34, 0.7);
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 #content{
@@ -23,11 +25,15 @@ header{
 
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 nav{
     text-align: center;
     font-family: "Roboto", Helvetica, sans-serif;
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a:hover{
@@ -42,8 +48,26 @@ nav a{
     padding: 35px;
 }
 
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
 #hero-img{
     width: 1600px;
+}
+
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 #hero-msg h1{
@@ -55,33 +79,53 @@ nav a{
 }
 
 .home{
-    color: #42271c;
+    color: white;
     font-family: "rye", Georgia, serif;
     font-size: 2em;
     margin-top: 10px;
 }
 
 .below_home{
-    color: #42271c;
+    color: white;
     font-family: "Roboto", Helvetica, sans-serif;
 
 }
 
-.shop{
+.shop1{
     text-decoration: none;
-    color: #0b3d22;
+    color: white;
     font-family: "Roboto", Helvetica, sans-serif;
     font-size: 18px;
     padding: 15px 30px;
     margin-top: 50px;
-
-}
-
-.shop:hover{
     background-color: #0b3d22;
-    color: #f7eade;
     border-radius: 5px;
 }
+
+.shop2{
+    text-decoration: none;
+    color: white;
+    font-family: "Roboto", Helvetica, sans-serif;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    background-color: #0b3d22;
+    border-radius: 5px;
+
+}
+
+.shop1:hover{
+    background-color: #f7eade;
+    color: #0b3d22;
+    border-radius: 5px;
+}
+
+.shop2:hover{
+    background-color: #f7eade;
+    color: #0b3d22;
+    border-radius: 5px;
+}
+
 
 .button-box{
     text-align: center;
@@ -97,22 +141,62 @@ main section img{
     box-sizing: border-box;
 }
 
-.card{
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.card-raft{
     margin: 200px 0px;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.card-oars{
+    margin: 200px 0px;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.card-protection{
+    margin: 200px 0px;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 .card-img{
-    border: 10px solid #42271c
+    border: 10px solid #42271c;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #28150E;
+}
+
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.canyon{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #28150E;
 }
 
 #background {
     height: 725px;
     background-color: #0b3d22;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 .msg{
-    color: #42271c;
+    color: white;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    background-color: #42271c;
+    box-shadow: 5px 5px 10px #28150E;
 }
 
 .msg h2{
@@ -150,4 +234,48 @@ footer p a:hover {
 
 footer .social img{
     padding-top: 15px;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home {
+        font-size: 25px;
+    }
+    .card-raft, .card-oars, .card-protection { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .canyon, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
