--- a/wdd130/personal/styles/index.css
+++ b/wdd130/personal/styles/index.css
@@ -1,3 +1,166 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Eagle+Lake&display=swap');
+
 img{
-    width: 500px;
+    width: 100%;
 }
+
+body{
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+    font-family: DM Serif text, Helvetica, sans-serif;
+   }
+   
+   header{
+       background-color: #0D360D;
+       display: grid;
+       grid-template-columns: 150px auto;
+   }
+   
+   #content{
+       max-width:1600px;
+       margin: 0 auto;
+   }
+   
+   .logo{
+       width: 120px;
+       padding-top: 10px;
+   }
+   
+   #logo_link{
+       padding-top: 5px;
+       justify-self: center;
+       align-self: center;
+   }
+   
+   nav{
+       text-align: center;
+       font-family: "Roboto", Helvetica, sans-serif;
+       display: flex;
+       justify-content: space-around;
+   }
+   
+   nav a:hover{
+       background-color: #73df8e;
+       color: black;
+   }
+   
+   nav a{
+       text-align: center;
+       color: #ffffff;
+       text-decoration: none;
+       padding: 35px;
+   }
+
+   #hero-img{
+    display: block;
+    max-width: 1300px;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+
+h1{
+    font-family: "Eagle Lake", Helvetica, sans-serif;
+    text-align: center;
+}
+
+#intro{
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+#example_sheet{
+    display: block;
+    width: 750px;
+    margin: 0 auto;
+}
+
+#grid{
+    display: grid;
+    grid-template-columns: 150px 1fr 100px 1fr 150px;
+    grid-template-rows: repeat(5, 100px 1fr);
+    place-items: center;
+    text-align: center;
+
+}
+
+#grid img{
+    border: 10px solid #73df8e;
+    border-radius: 1%;
+}
+
+#species{
+    grid-column: 2;
+    grid-row: 2;
+}
+
+#p1{
+    grid-column: 4;
+    grid-row: 2;
+}
+
+#p2{
+    grid-column: 2;
+    grid-row: 4;
+}
+
+#class{
+    grid-column: 4;
+    grid-row: 4;
+}
+
+#stats{
+    grid-column: 2;
+    grid-row: 6;
+}
+
+#p3{
+    grid-column: 4;
+    grid-row: 6;
+}
+
+#p4{
+    grid-column: 2;
+    grid-row: 8;
+}
+
+#background{
+    grid-column: 4;
+    grid-row: 8;
+}
+
+#equip{
+    grid-column: 2;
+    grid-row: 10;
+}
+
+#p5{
+    grid-column: 4;
+    grid-row: 10;
+
+}
+
+footer{
+    background-color: #0D360D;
+    padding: 25px 50px;
+    margin-top: 200px;
+}
+
+footer p {
+    font-size: 1.2em;
+    color: #ffffff;
+}
+
+footer p a{
+    color: #ffffff;
+    text-decoration: none;
+}
+
+footer p a:hover {
+    text-decoration: none;
+    color: #000000;
+    background-color: #ffffff;
+}    
