--- a/wdd130/personal/styles/index.css
+++ b/wdd130/personal/styles/index.css
@@ -84,7 +84,6 @@ h1{
     grid-template-rows: repeat(5, 100px 1fr);
     place-items: center;
     text-align: center;
-
 }
 
 #grid img{
@@ -141,6 +140,65 @@ h1{
     grid-column: 4;
     grid-row: 10;
 
+}
+
+.overlay { 
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+  }
+  
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+
+  .overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+
+  #open{
+    font-size: 40px;
+    text-align: center;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 15px 30px;
+    margin: 50px;
+    background-color: #0D360D;
+    border-radius: 5px;
+  }
+
+  #open:hover{
+    background-color: #ffffff;
+    color: #0D360D;
+    border-radius: 5px;
 }
 
 footer{
